name:                landing
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              dennis84
maintainer:          d.dietrich84@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable landing
  main-is: Main.hs
  build-depends:
      base              >= 4      && <5
    , wai               >= 3.0
    , warp              >= 3.0
    , http-types        >= 0.8

  default-language:    Haskell2010
